--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -39,26 +39,26 @@
 }
 
 .item__imagen--html5{
-    background-image: url(/IMG/html5.webp);
+    background-image: url(IMG/html5.webp);
     width: 150px;
     height: 150px;
 }
 
 .item__imagen--css3{
-    background-image: url(/IMG/css3.png);
+    background-image: url(IMG/css3.png);
     width: 150px;
     height: 150px;
 }
 
 .item__imagen--javascript{
-    background-image: url(/IMG/javascript2.png);
+    background-image: url(IMG/javascript2.png);
     width: 150px;
     height: 150px;
     border-radius: 100%;
 }
 
 .item__imagen--react{
-    background-image: url(/IMG/react.png);
+    background-image: url(IMG/react.png);
     width: 150px;
     height: 150px;
     border-radius: 100%;
